--- a/index.html
+++ b/index.html
@@ -435,58 +435,82 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body class="article">
+<body class="article toc2 toc-left">
 <div id="header">
+<h1>Apache Camel on OCP Best practices</h1>
+<div id="toc" class="toc2">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#_introduction">1. Introduction</a></li>
+<li><a href="#_vaults">2. Vaults</a>
+<ul class="sectlevel2">
+<li><a href="#_aws_secrets_manager">2.1. AWS Secrets Manager</a></li>
+<li><a href="#_gcp_secret_manager">2.2. GCP Secret Manager</a></li>
+<li><a href="#_azure_key_vault">2.3. Azure Key Vault</a></li>
+<li><a href="#_hashicorp_vault">2.4. Hashicorp Vault</a></li>
+</ul>
+</li>
+<li><a href="#_ocp_configmapssecrets">3. OCP Configmaps/Secrets</a>
+<ul class="sectlevel2">
+<li><a href="#_ocp_secrets">3.1. OCP Secrets</a></li>
+<li><a href="#_ocp_configmaps">3.2. OCP Configmaps</a></li>
+</ul>
+</li>
+</ul>
+</div>
 </div>
 <div id="content">
+<div id="preamble">
+<div class="sectionbody">
+<!-- toc disabled -->
+</div>
+</div>
 <div class="sect1">
 <h2 id="_introduction">1. Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>A list of best practices documents for Apache Camel on OCP</p>
+<p>A curated list of documented best practices to use Apache Camel on <a href="https://www.redhat.com/en/technologies/cloud-computing/openshift"><strong>OpenShift</strong></a>.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_vaults">2. Vaults</h2>
 <div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p><a href="aws-secrets-manager-vault.html">AWS Secrets Manager</a></p>
-</li>
-<li>
-<p><a href="gcp-secret-manager-vault.html">GCP Secret Manager</a></p>
-</li>
-<li>
-<p><a href="azure-key-vault.html">Azure Key Vault</a></p>
-</li>
-<li>
-<p><a href="hashicorp-vault.html">Hashicorp Vault</a></p>
-</li>
-</ol>
+<div class="sect2">
+<h3 id="_aws_secrets_manager">2.1. <a href="aws-secrets-manager-vault.html">AWS Secrets Manager</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_gcp_secret_manager">2.2. <a href="gcp-secret-manager-vault.html">GCP Secret Manager</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_azure_key_vault">2.3. <a href="azure-key-vault.html">Azure Key Vault</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_hashicorp_vault">2.4. <a href="hashicorp-vault.html">Hashicorp Vault</a></h3>
+
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_ocp_configmapssecrets">3. OCP Configmaps/Secrets</h2>
 <div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p><a href="ocp-secrets.html">OCP Secrets</a></p>
-</li>
-<li>
-<p><a href="ocp-configmaps.html">OCP Configmaps</a></p>
-</li>
-</ol>
+<div class="sect2">
+<h3 id="_ocp_secrets">3.1. <a href="ocp-secrets.html">OCP Secrets</a></h3>
+
+</div>
+<div class="sect2">
+<h3 id="_ocp_configmaps">3.2. <a href="ocp-configmaps.html">OCP Configmaps</a></h3>
+
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-14 19:05:28 UTC
+Last updated 2024-10-15 16:39:25 UTC
 </div>
 </div>
 </body>
