deploy: b0a5419f44dc532963540ef7f8ad50526ff0c44c

--- a/aws-secrets-manager-vault.html
+++ b/aws-secrets-manager-vault.html
@@ -643,6 +643,9 @@ secrets field will be retrieved.</p>
 </div>
 </div>
 <div class="paragraph">
+<p>For more information about the usable syntax, you can look at <a href="https://camel.apache.org/components/4.8.x/aws-secrets-manager-component.html#_using_aws_secrets_manager_property_function">AWS Secrets Manager Property Function</a></p>
+</div>
+<div class="paragraph">
 <p>The Spring Boot and Quarkus runtime have the starter and the extension
 related to AWS Secret Manager in their catalogs. The export and export
 Kubernetes command from camel-jbang, will automatically add the
@@ -846,7 +849,7 @@ Secrets Manager events instead of Cloudtrail full events list.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-21 13:29:29 UTC
+Last updated 2024-10-24 16:32:25 UTC
 </div>
 </div>
 </body>
