--- a/azure-key-vault.html
+++ b/azure-key-vault.html
@@ -692,6 +692,9 @@ camel.vault.azure.vaultName = vaultName</pre>
 </div>
 </div>
 <div class="paragraph">
+<p>For more information about the usable syntax, you can look at <a href="https://camel.apache.org/components/4.8.x/azure-key-vault-component.html#_using_azure_key_vault_property_function">Azure Key Vault Property Function</a></p>
+</div>
+<div class="paragraph">
 <p>The same configuration could be seen on OCP by following the Camel on
 OCP Best Practices repository, in particular, the AWS vault section. You
 can follow the example for both the runtimes supported by Red Hat Build
@@ -916,7 +919,7 @@ camel.main.context-reload-enabled=true</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-21 13:29:29 UTC
+Last updated 2024-10-24 16:32:25 UTC
 </div>
 </div>
 </body>
