--- a/gcp-secret-manager-vault.html
+++ b/gcp-secret-manager-vault.html
@@ -638,6 +638,9 @@ secrets field will be retrieved.</p>
 </div>
 </div>
 <div class="paragraph">
+<p>For more information about the usable syntax, you can look at <a href="https://camel.apache.org/components/4.8.x/google-secret-manager-component.html#_using_gcp_secret_manager_properties_source">Google Secret Manager Property Function</a></p>
+</div>
+<div class="paragraph">
 <p>The Spring Boot and Quarkus runtime have the starter and the extension
 related to AWS Secret Manager in their catalogs. The export and export
 Kubernetes command from camel-jbang, will automatically add the
@@ -853,7 +856,7 @@ OCP Best Practices repository, in particular, the GCP vault section:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-21 13:29:29 UTC
+Last updated 2024-10-24 16:32:25 UTC
 </div>
 </div>
 </body>
