--- a/hashicorp-vault.html
+++ b/hashicorp-vault.html
@@ -518,6 +518,9 @@ camel.vault.hashicorp.scheme = scheme</pre>
 </div>
 </div>
 <div class="paragraph">
+<p>For more information about the usable syntax, you can look at <a href="https://camel.apache.org/components/4.8.x/hashicorp-vault-component.html#_using_hashicorp_vault_property_function">Hashicorp Vault Property Function</a></p>
+</div>
+<div class="paragraph">
 <p>The same configuration could be seen on OCP by following the Camel on
 OCP Best Practices repository, in particular, the Hashicorp vault section. You
 can follow the example for both the runtimes supported by Red Hat Build
@@ -536,7 +539,7 @@ of Apache Camel:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-21 13:29:29 UTC
+Last updated 2024-10-24 16:32:25 UTC
 </div>
 </div>
 </body>
