deploy: a279fae7256b70939402a89cd494a97f0a92dd68

--- a/index.html
+++ b/index.html
@@ -450,10 +450,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_hashicorp_vault">2.4. Hashicorp Vault</a></li>
 </ul>
 </li>
-<li><a href="#_ocp_configmapssecrets">3. OCP Configmaps/Secrets</a>
+<li><a href="#_cicd">3. CI/CD</a>
 <ul class="sectlevel2">
-<li><a href="#_ocp_secrets">3.1. OCP Secrets</a></li>
-<li><a href="#_ocp_configmaps">3.2. OCP Configmaps</a></li>
+<li><a href="#_ocp_cicd">3.1. OCP CI/CD</a></li>
+</ul>
+</li>
+<li><a href="#_ocp_configmapssecrets">4. OCP Configmaps/Secrets</a>
+<ul class="sectlevel2">
+<li><a href="#_ocp_secrets">4.1. OCP Secrets</a></li>
+<li><a href="#_ocp_configmaps">4.2. OCP Configmaps</a></li>
 </ul>
 </li>
 </ul>
@@ -495,14 +500,23 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_ocp_configmapssecrets">3. OCP Configmaps/Secrets</h2>
+<h2 id="_cicd">3. CI/CD</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_ocp_secrets">3.1. <a href="ocp-secrets.html">OCP Secrets</a></h3>
+<h3 id="_ocp_cicd">3.1. <a href="ocp-cicd.html">OCP CI/CD</a></h3>
+
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_ocp_configmapssecrets">4. OCP Configmaps/Secrets</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_ocp_secrets">4.1. <a href="ocp-secrets.html">OCP Secrets</a></h3>
 
 </div>
 <div class="sect2">
-<h3 id="_ocp_configmaps">3.2. <a href="ocp-configmaps.html">OCP Configmaps</a></h3>
+<h3 id="_ocp_configmaps">4.2. <a href="ocp-configmaps.html">OCP Configmaps</a></h3>
 
 </div>
 </div>
@@ -510,7 +524,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-24 16:32:25 UTC
+Last updated 2024-10-29 18:08:01 UTC
 </div>
 </div>
 </body>
