deploy: 08a5282144923d16a90925cf744eaf8b5571a623

--- a/index.html
+++ b/index.html
@@ -455,10 +455,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_ocp_cicd">3.1. OCP CI/CD</a></li>
 </ul>
 </li>
-<li><a href="#_ocp_configmapssecrets">4. OCP Configmaps/Secrets</a>
+<li><a href="#_openshift_container_platform">4. Openshift Container Platform</a>
 <ul class="sectlevel2">
-<li><a href="#_ocp_secrets">4.1. OCP Secrets</a></li>
-<li><a href="#_ocp_configmaps">4.2. OCP Configmaps</a></li>
+<li><a href="#_secrets">4.1. Secrets</a></li>
+<li><a href="#_configmaps">4.2. Configmaps</a></li>
+</ul>
+</li>
+<li><a href="#_observability">5. Observability</a>
+<ul class="sectlevel2">
+<li><a href="#_ocp_observability">5.1. OCP Observability</a></li>
 </ul>
 </li>
 </ul>
@@ -509,14 +514,23 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_ocp_configmapssecrets">4. OCP Configmaps/Secrets</h2>
+<h2 id="_openshift_container_platform">4. Openshift Container Platform</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_ocp_secrets">4.1. <a href="ocp-secrets.html">OCP Secrets</a></h3>
+<h3 id="_secrets">4.1. <a href="ocp-secrets.html">Secrets</a></h3>
 
 </div>
 <div class="sect2">
-<h3 id="_ocp_configmaps">4.2. <a href="ocp-configmaps.html">OCP Configmaps</a></h3>
+<h3 id="_configmaps">4.2. <a href="ocp-configmaps.html">Configmaps</a></h3>
+
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_observability">5. Observability</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_ocp_observability">5.1. <a href="camel-on-ocp-observability.html">OCP Observability</a></h3>
 
 </div>
 </div>
@@ -524,7 +538,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-29 18:08:01 UTC
+Last updated 2024-11-11 10:05:08 UTC
 </div>
 </div>
 </body>
