--- a/ocp-cicd.html
+++ b/ocp-cicd.html
@@ -607,17 +607,44 @@ The Update resources step can be performed manually (like it is assumed in the e
 <div class="title">Figure 6. Openshift GitOps New App</div>
 </div>
 <div class="paragraph">
-<p>Fill in the following information, many of which may auto-fill when selected:
-* Application Name: camel-cicd-exampleapp
-* Project Name: default
-* Sync Policy: Automatic
-* Self Heal: Disabled
-* Auto-Create Namespace: Enabled
-* Repository URL: <a href="https://github.com/valdar/camel-cicd-gitops" class="bare">https://github.com/valdar/camel-cicd-gitops</a>
-* Revision: main
-* Path: environments/dev
-* Cluster URL: <a href="https://kubernetes.default.svc" class="bare">https://kubernetes.default.svc</a>
-* Namespace: the namespace you want the app deployied into</p>
+<p>Fill in the following information, many of which may auto-fill when selected:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Application Name: camel-cicd-exampleapp</p>
+</li>
+<li>
+<p>Project Name: default</p>
+</li>
+<li>
+<p>Sync Policy: Automatic</p>
+</li>
+<li>
+<p>Self Heal: Disabled</p>
+</li>
+<li>
+<p>Auto-Create Namespace: Enabled</p>
+</li>
+<li>
+<p>Repository URL: <a href="https://github.com/valdar/camel-cicd-gitops" class="bare">https://github.com/valdar/camel-cicd-gitops</a></p>
+</li>
+<li>
+<p>Revision: main</p>
+</li>
+<li>
+<p>Path: environments/dev</p>
+</li>
+<li>
+<p>Cluster URL: <a href="https://kubernetes.default.svc" class="bare">https://kubernetes.default.svc</a></p>
+</li>
+<li>
+<p>Namespace: the namespace you want the app deployied into</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>When finished, click the CREATE button in the top left-hand corner. This will create the application in Argo CD and begin the syncing process.</p>
 </div>
 </div>
 </div>
@@ -642,7 +669,7 @@ The Update resources step can be performed manually (like it is assumed in the e
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-29 18:08:01 UTC
+Last updated 2024-11-11 10:05:08 UTC
 </div>
 </div>
 </body>
